--- a/DIS/templates/areyousure.html
+++ b/DIS/templates/areyousure.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sip'n'Save</title>
+    <title>Don't lie</title>
 </head>
 <style>
      body {
@@ -32,14 +32,14 @@
 
 </style>
 <body>
-    <h1 class="question">Feeling thirsty?</h1>
+    <h1 class="question">Are you sure that you're not thirsty?</h1>
     <body>
         <ul>
             <li style="display:inline-block;">
                 <a href="{{ url_for('drink_type') }}" class="answer" style="text-align:center; text-decoration:none; color:#00FF00"><h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYes&nbsp&nbsp&nbsp&nbsp</h1></a>
             </li>
             <li style="display:inline-block;">
-                <a href="{{ url_for('are_you_sure') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
+                <a href="{{ url_for('mind') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
             </li>
         </ul>
     <img src="static/drink.gif" class="gif"/>
