--- a/DIS/templates/mind.html
+++ b/DIS/templates/mind.html
@@ -32,19 +32,8 @@
 
 </style>
 <body>
-    <h1 class="question">Feeling thirsty?</h1>
-    <body>
-        <ul>
-            <li style="display:inline-block;">
-                <a href="{{ url_for('drink_type') }}" class="answer" style="text-align:center; text-decoration:none; color:#00FF00"><h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYes&nbsp&nbsp&nbsp&nbsp</h1></a>
-            </li>
-            <li style="display:inline-block;">
-                <a href="{{ url_for('are_you_sure') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
-            </li>
-        </ul>
-    <img src="static/drink.gif" class="gif"/>
+    <h1 class="question">Make up your mind!</h1>
+    <a href="{{ url_for('front_page') }}" class="answer" style="text-align:center; text-decoration:none; color:#ff0099"><h1>Okay</h1></a>
 </body>
 
     
-
-</html>
