--- a/DIS/templates/drinktype.html
+++ b/DIS/templates/drinktype.html
@@ -41,7 +41,7 @@
     
     <button type="submit" class="button submit buttontext">Submit</button>
     </form>
-</div>
+</div>x
 </body>
 </html>
   <p>
