--- a/DIS/templates/drinktype.html
+++ b/DIS/templates/drinktype.html
@@ -23,11 +23,11 @@
     <h2 class="question"> 
       What would you like to drink?
     </h2>  
-        <input type="radio" name= "drink" id="4" value="Beer">
+        <input type="radio" name= "drink" id="4" value="beer">
     <label for="4" class="buttontext" >Beer</label> <br> 
-      <input type="radio" name= "drink" id="5" value="Wine">
+      <input type="radio" name= "drink" id="5" value="wine">
     <label for="5" class="buttontext" >Wine</label> <br> 
-      <input type="radio" name= "drink" id="6" value="Cocktail">
+      <input type="radio" name= "drink" id="6" value="cocktail">
     <label for="6" class="buttontext">Cocktail</label> 
       <h2 class="question"> 
       Do you need to book a table?
@@ -41,7 +41,7 @@
     
     <button type="submit" class="button submit buttontext">Submit</button>
     </form>
-</div>x
+</div>
 </body>
 </html>
   <p>
