--- a/DIS/templates/frontpage.html
+++ b/DIS/templates/frontpage.html
@@ -50,7 +50,7 @@
                 <a href="{{ url_for('are_you_sure') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
             </li>
         </ul>
-        <a href="{{ url_for('login') }}"><img src="static/login.png" alt="Login" class="topright"></a>
+        <a href="{{ url_for('login') }}"><img src="static/login.png" alt="Login" class="topright" method="POST"></a>
     <img src="static/drink.gif" class="gif"/>
 </body>
 
