--- a/DIS/templates/login.html
+++ b/DIS/templates/login.html
@@ -50,7 +50,7 @@
 </head>    
 <body>    
     <center> <h1> Student Login Form </h1> </center>
-    <form action="login.php" method="POST">
+    <form action="" method="POST">
         <div class="container">   
             <label>Username : </label>   
             <input type="text" placeholder="Enter Username" name="username" required>  
