arbejder på rating funktion

--- a/DIS/templates/drinktype.html
+++ b/DIS/templates/drinktype.html
@@ -23,11 +23,11 @@
     <h2 class="question"> 
       What would you like to drink?
     </h2>  
-        <input type="radio" name= "drink" id="4" value="'beer'">
+        <input type="radio" name= "drink" id="4" value="beer">
     <label for="4" class="buttontext" >Beer</label> <br> 
-      <input type="radio" name= "drink" id="5" value="'wine'">
+      <input type="radio" name= "drink" id="5" value="wine">
     <label for="5" class="buttontext" >Wine</label> <br> 
-      <input type="radio" name= "drink" id="6" value="'cocktail'">
+      <input type="radio" name= "drink" id="6" value="cocktail">
     <label for="6" class="buttontext">Cocktail</label> 
       <h2 class="question"> 
       Do you need to book a table?
