--- a/DIS/templates/result.html
+++ b/DIS/templates/result.html
@@ -1,6 +1,6 @@
 <html lang="da">
 <head>
-    <title>Query Results</title>
+    <title>Results</title>
 </head>
 <body>
     <h1>Query Results</h1>
@@ -19,8 +19,16 @@
             <tr>
                 <td>{{ row[1] }}</td>
                 <td>{{ row[3] }}</td>
-                <td>{{ row[7] }}</td>
+                <td>{{ row[8] }}</td>
                 <td>{{ row[drinkcol] }}</td>
+                <td>
+                    <form action="/rate" method="post">
+                        <input type="hidden" name="id" value="{{ row[0] }}">
+                        <!-- <input type="hidden" name="name" value="{{ row[1] }}">
+                        <input type="hidden" name="address" value="{{ row[3] }}"> -->
+                        <button type="submit">Rate</button>
+                    </form>
+                </td>
 -            </tr>
             {% endfor %}
         </tbody>
