--- a/DIS/templates/rate.html
+++ b/DIS/templates/rate.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="../static/main.css">
     <title>Rate Bar</title>
     <style>
         .rating {
@@ -32,21 +33,17 @@
     <h1>Rate Bar</h1>
     <p>{{Name}}</p><br>
     <p>{{Address}}</p><br>
-    <form action="/rate" method="post">
-        <input type="hidden" name="id" value="{{ row[0] }}">
-        <input type="hidden" name="name" value="{{ row[1] }}">
-        <input type="hidden" name="address" value="{{ row[2] }}">
-        
+    <form action="/rate" method="post">   
         <div class="rating">
-            <input type="radio" id="star5" name="rating" value="5" required/>
+            <input type="radio" id="star5" name="{{ row[0] }}" value="5" required/>
             <label for="star5" title="5 stars">&#9733;</label>
-            <input type="radio" id="star4" name="rating" value="4" required/>
+            <input type="radio" id="star4" name="{{ row[0] }}" value="4" required/>
             <label for="star4" title="4 stars">&#9733;</label>
-            <input type="radio" id="star3" name="rating" value="3" required/>
+            <input type="radio" id="star3" name="{{ row[0] }}" value="3" required/>
             <label for="star3" title="3 stars">&#9733;</label>
-            <input type="radio" id="star2" name="rating" value="2" required/>
+            <input type="radio" id="star2" name="{{ row[0] }}" value="2" required/>
             <label for="star2" title="2 stars">&#9733;</label>
-            <input type="radio" id="star1" name="rating" value="1" required/>
+            <input type="radio" id="star1" name="{{ row[0] }}" value="1" required/>
             <label for="star1" title="1 star">&#9733;</label>
         </div>
         
