--- a/DIS/templates/drinktype.html
+++ b/DIS/templates/drinktype.html
@@ -37,17 +37,18 @@
     <label for="7" class="buttontext">Yes</label> <br> 
       <input type="radio" name= "table" id="8"   value="No">
     <label for="8" class="buttontext">No</label> 
-  
+    <br> <br> 
     
     <button type="submit" class="button submit buttontext">Submit</button>
     </form>
 </div>
 </body>
 </html>
-  <p>
-    <a href="{{ url_for('front_page') }}">Front Page</a>
-</p>
-<!-- <a href="{{ url_for('result') }}" target="_blank">Submit</a> -->
+<a href="{{ url_for('front_page') }}" style="text-decoration: none;" >
+  <span style="font-size: 30px;" class="button submit buttontext">&larr;</span>
+</a>
+  
+
 </div>
 
 </body>
