--- a/DIS/static/main.css
+++ b/DIS/static/main.css
@@ -1,5 +1,4 @@
 a:link, a:visited {
-    background-color: #3ff436;
     color: white;
     padding: 14px 25px;
     text-align: center;
@@ -8,11 +7,11 @@ a:link, a:visited {
   }
   
   a:hover, a:active {
-    background-color: rgba(0, 255, 13, 0.734);
+    opacity: 1;
   }
     
   body {
-  background-color: rgb(140, 129, 129);
+  background-color: rgb(0, 0, 0);
   }
   
   .container{
@@ -53,7 +52,7 @@ a:link, a:visited {
     }
     
     .submit{
-    background-color: #21df14;
+    background-color: #ffbb01;
     margin: 0 auto;
     display: block;
     }
@@ -92,3 +91,29 @@ a:link, a:visited {
     .rating input:checked ~ label {
         color: #ffca08;
     }
+
+    .result_table{
+      font-family:"Lucida Console", "Courier New", monospace;
+      color:azure;
+    }
+
+    .result_table td {
+      padding: 16px; /* Adjust the value as needed */      
+      text-align: center;
+    }
+    .result_table th {
+      padding: 16px; /* Adjust the value as needed */
+      text-align: center;
+      font-size: 20px;
+    }
+
+    .result_header{
+      color:lightsalmon;
+      text-align: center;
+      font-size: 50px;
+    }
+  
+
+  
+
+  
