--- a/DIS/templates/areyousure.html
+++ b/DIS/templates/areyousure.html
@@ -2,44 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/main.css">
     <title>Don't lie</title>
 </head>
-<style>
-     body {
-        background-color: black;
-    }
 
-    .question {
-        font-size: 600%;
-        color: #FFFFFF;
-        text-align: center;
-    }
-
-    .answer {
-        font-size: 300%;
-        font-family:"Lucida Console", "Courier New", monospace;
-        display: block;
-        margin-left: 100;
-        margin-right: auto;
-        width: 7%;
-    }
-
-    .gif {
-        font-family:"Lucida Console", "Courier New", monospace;
-        margin-top: 80px; 
-        max-width: 100%;
-    }
-
-</style>
 <body>
-    <h1 class="question">Are you sure that you're not thirsty?</h1>
+    <h1 class="frontquestion" font-size: 300%;>Are you sure that you're not thirsty?</h1>
     <body>
         <ul>
             <li style="display:inline-block;">
-                <a href="{{ url_for('drink_type') }}" class="answer" style="text-align:center; text-decoration:none; color:#00FF00"><h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYes&nbsp&nbsp&nbsp&nbsp</h1></a>
+                <a href="{{ url_for('mind') }}" class="answer" style="text-align:center; text-decoration:none; color:#00FF00"><h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYes&nbsp&nbsp&nbsp&nbsp</h1></a>
             </li>
             <li style="display:inline-block;">
-                <a href="{{ url_for('mind') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
+                <a href="{{ url_for('drink_type') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
             </li>
         </ul>
     <img src="static/drink.gif" class="gif"/>
