--- a/DIS/templates/frontpage.html
+++ b/DIS/templates/frontpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../static/main.css">
     <meta charset="UTF-8">
     <title>Sip'n'Save</title>
 </head>
@@ -9,38 +10,11 @@
         background-color: black;
     }
 
-    .question {
-        font-size: 600%;
-        color: #FFFFFF;
-        text-align: center;
-    }
-
-    .answer {
-        font-size: 300%;
-        font-family:"Lucida Console", "Courier New", monospace;
-        display: block;
-        margin-left: 100;
-        margin-right: auto;
-        width: 7%;
-    }
-
-    .gif {
-        font-family:"Lucida Console", "Courier New", monospace;
-        margin-top: 80px; 
-        max-width: 100%;
-    }
-
-    .topright {
-        position: absolute;
-        top: 8px;
-        right: 16px;
-        font-size: 18px;
-        max-width: 8%;
-    }
+    
 
 </style>
 <body>
-    <h1 class="question">Feeling thirsty?</h1>
+    <h1 class="frontquestion">Feeling thirsty?</h1>
     <body>
         <ul>
             <li style="display:inline-block;">
@@ -48,10 +22,7 @@
             </li>
             <li style="display:inline-block;">
                 <a href="{{ url_for('are_you_sure') }}" class="answer" style="text-align:center; text-decoration:none; color:#FF1919"><h1>No</h1></a>
-            </li>
-        </ul>
-        <a href="{{ url_for('login') }}"><img src="static/login.png" alt="Login" class="topright" method="POST"></a>
-    <img src="static/drink.gif" class="gif"/>
+            </li>        
 </body>
 
     
